# image_roi_edit

./: .gitignore  README.md  README.zh-CN.md  progress.md  pyproject.toml  requirements.txt
docs/: local_flow_hardening_checklist.md  roi_text_replacement_rules.md  staged_roi_pipeline_design.md  text_shape_joint_optimization_design.md  workflow_architecture_boundaries.md  workflow_checklist.md
scripts/: check_environment.py  roi_image_edit_cli.py  roi_image_edit_web.py  run_iterative_roi.py  validate_checklist_closure_message.py
tests/: test_acceptance_feedback.py  test_amount_glyph_clone.py  test_amount_replacement.py  test_auto_roi_artifacts.py  test_auto_roi_evidence.py  test_auto_roi_field_coverage.py  test_background_cleanup.py  test_checklist_commit_policy.py  test_checklist_integrity.py  test_cli_progress.py  test_completion_claims.py  test_complexity_normalized_ink_thresholds.py  test_controlled_escape_candidates.py  test_design_alignment.py  test_failure_artifacts.py  test_font_style_reference.py  test_forced_model_seed_candidates.py  test_hard_boundary.py  test_historical_acceptance.py  test_image_classification.py  test_ink_balance_darkness.py  test_ink_gray_candidate_grid.py  test_ink_gray_micro_tuning.py  test_instruction_parsing.py  test_iterative_pipeline_stage_context.py  test_layered_candidate_search.py  test_local_acceptance_gate.py  test_model_suggestions.py  test_no_hardcoded_special_cases.py  test_photo_texture_candidate_grid.py  test_photo_texture_validation.py  test_placement_strategy.py  test_pre_candidate_gates.py  test_prompt_context_fields.py  (+31 more)
(+61 files in other folders)
